--- a/predicao-bons-pagadores.ipynb
+++ b/predicao-bons-pagadores.ipynb
@@ -1559,14 +1559,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "27fedbde-fb4c-4c1e-ad6d-36822d53f8ec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 65,
    "id": "02f10c38-f483-4b5e-a1e4-294321c84a5a",
    "metadata": {},
@@ -1589,9 +1581,550 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "280c5fe8-08c9-4f95-a7a0-0189182d7a90",
+   "metadata": {},
+   "source": [
+    "###### Quando construímos um modelo de regressão logística uma das coisas que observamos é a linearidade da variável com o log da odds visando ter uma boa determinação dos coeficientes da regressão. Então, por isso nesse caso o autor sugere utilizar ou um modelo que capture as não linearidades como modelos de árvores ou utilizar outro tipo de encoding (OHE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "2520d34e-72fb-4d2f-b834-5351cb4dc430",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_mapping = {1: \"graduate school\",\n",
+    "                 2: \"university\",\n",
+    "                 3: \"high school\",\n",
+    "                 4: \"others\"}\n",
+    "\n",
+    "df_clean_1[\"EDUCATION_CAT\"] = df_clean_1[\"EDUCATION\"].map(cat_mapping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "2c826bbc-aa0a-4924-ab44-21d5b9cd9a47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>graduate school</th>\n",
+       "      <th>high school</th>\n",
+       "      <th>others</th>\n",
+       "      <th>university</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   graduate school  high school  others  university\n",
+       "0                0            0       0           1\n",
+       "1                0            0       0           1\n",
+       "2                0            0       0           1\n",
+       "3                0            0       0           1\n",
+       "4                0            0       0           1"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "education_ohe = pd.get_dummies(df_clean_1[\"EDUCATION_CAT\"]).astype(int)\n",
+    "\n",
+    "education_ohe.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "31bbafd3-4c3d-43e2-b033-3c1587568eff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df_clean_1, education_ohe], axis=1)\\\n",
+    "        .drop([\"EDUCATION\", \"EDUCATION_CAT\"], axis=1)\\\n",
+    "        .rename(columns={\"default payment next month\": \"TARGET\",\n",
+    "                         \"graduate school\": \"EDUC_GRAD_SCHOOL\",\n",
+    "                         \"high school\": \"EDUC_HIGH_SCHOOL\",\n",
+    "                         \"others\": \"EDUC_OTHERS\",\n",
+    "                         \"university\": \"EDUC_UNIVERSITY\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "d56519a0-f3c0-429c-b304-83eafb592d0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>LIMIT_BAL</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>MARRIAGE</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>PAY_1</th>\n",
+       "      <th>PAY_2</th>\n",
+       "      <th>PAY_3</th>\n",
+       "      <th>PAY_4</th>\n",
+       "      <th>PAY_5</th>\n",
+       "      <th>PAY_6</th>\n",
+       "      <th>BILL_AMT1</th>\n",
+       "      <th>BILL_AMT2</th>\n",
+       "      <th>BILL_AMT3</th>\n",
+       "      <th>BILL_AMT4</th>\n",
+       "      <th>BILL_AMT5</th>\n",
+       "      <th>BILL_AMT6</th>\n",
+       "      <th>PAY_AMT1</th>\n",
+       "      <th>PAY_AMT2</th>\n",
+       "      <th>PAY_AMT3</th>\n",
+       "      <th>PAY_AMT4</th>\n",
+       "      <th>PAY_AMT5</th>\n",
+       "      <th>PAY_AMT6</th>\n",
+       "      <th>TARGET</th>\n",
+       "      <th>EDUC_GRAD_SCHOOL</th>\n",
+       "      <th>EDUC_HIGH_SCHOOL</th>\n",
+       "      <th>EDUC_OTHERS</th>\n",
+       "      <th>EDUC_UNIVERSITY</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>798fc410-45c1</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>3913</td>\n",
+       "      <td>3102</td>\n",
+       "      <td>689</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>689</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8a8c8f3b-8eb4</td>\n",
+       "      <td>120000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>26</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2682</td>\n",
+       "      <td>1725</td>\n",
+       "      <td>2682</td>\n",
+       "      <td>3272</td>\n",
+       "      <td>3455</td>\n",
+       "      <td>3261</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>85698822-43f5</td>\n",
+       "      <td>90000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>29239</td>\n",
+       "      <td>14027</td>\n",
+       "      <td>13559</td>\n",
+       "      <td>14331</td>\n",
+       "      <td>14948</td>\n",
+       "      <td>15549</td>\n",
+       "      <td>1518</td>\n",
+       "      <td>1500</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0737c11b-be42</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46990</td>\n",
+       "      <td>48233</td>\n",
+       "      <td>49291</td>\n",
+       "      <td>28314</td>\n",
+       "      <td>28959</td>\n",
+       "      <td>29547</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>1069</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3b7f77cc-dbc0</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>57</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8617</td>\n",
+       "      <td>5670</td>\n",
+       "      <td>35835</td>\n",
+       "      <td>20940</td>\n",
+       "      <td>19146</td>\n",
+       "      <td>19131</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>36681</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>9000</td>\n",
+       "      <td>689</td>\n",
+       "      <td>679</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              ID  LIMIT_BAL  SEX  MARRIAGE  AGE  PAY_1  PAY_2  PAY_3  PAY_4  \\\n",
+       "0  798fc410-45c1      20000    2         1   24      2      2     -1     -1   \n",
+       "1  8a8c8f3b-8eb4     120000    2         2   26     -1      2      0      0   \n",
+       "2  85698822-43f5      90000    2         2   34      0      0      0      0   \n",
+       "3  0737c11b-be42      50000    2         1   37      0      0      0      0   \n",
+       "4  3b7f77cc-dbc0      50000    1         1   57     -1      0     -1      0   \n",
+       "\n",
+       "   PAY_5  PAY_6  BILL_AMT1  BILL_AMT2  BILL_AMT3  BILL_AMT4  BILL_AMT5  \\\n",
+       "0     -2     -2       3913       3102        689          0          0   \n",
+       "1      0      2       2682       1725       2682       3272       3455   \n",
+       "2      0      0      29239      14027      13559      14331      14948   \n",
+       "3      0      0      46990      48233      49291      28314      28959   \n",
+       "4      0      0       8617       5670      35835      20940      19146   \n",
+       "\n",
+       "   BILL_AMT6  PAY_AMT1  PAY_AMT2  PAY_AMT3  PAY_AMT4  PAY_AMT5  PAY_AMT6  \\\n",
+       "0          0         0       689         0         0         0         0   \n",
+       "1       3261         0      1000      1000      1000         0      2000   \n",
+       "2      15549      1518      1500      1000      1000      1000      5000   \n",
+       "3      29547      2000      2019      1200      1100      1069      1000   \n",
+       "4      19131      2000     36681     10000      9000       689       679   \n",
+       "\n",
+       "   TARGET  EDUC_GRAD_SCHOOL  EDUC_HIGH_SCHOOL  EDUC_OTHERS  EDUC_UNIVERSITY  \n",
+       "0       1                 0                 0            0                1  \n",
+       "1       1                 0                 0            0                1  \n",
+       "2       0                 0                 0            0                1  \n",
+       "3       0                 0                 0            0                1  \n",
+       "4       0                 0                 0            0                1  "
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cd2e044-aa1d-4bf5-bb6f-91dc1dfe0ded",
+   "metadata": {},
+   "source": [
+    "##### Exploring the Financial History Features in the Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "75634b61-9aef-4198-b9ec-e74e32538335",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PAY_1</th>\n",
+       "      <th>PAY_2</th>\n",
+       "      <th>PAY_3</th>\n",
+       "      <th>PAY_4</th>\n",
+       "      <th>PAY_5</th>\n",
+       "      <th>PAY_6</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>26664.000000</td>\n",
+       "      <td>26664.000000</td>\n",
+       "      <td>26664.000000</td>\n",
+       "      <td>26664.000000</td>\n",
+       "      <td>26664.000000</td>\n",
+       "      <td>26664.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>-0.017777</td>\n",
+       "      <td>-0.133363</td>\n",
+       "      <td>-0.167679</td>\n",
+       "      <td>-0.225023</td>\n",
+       "      <td>-0.269764</td>\n",
+       "      <td>-0.293579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.126769</td>\n",
+       "      <td>1.198640</td>\n",
+       "      <td>1.199165</td>\n",
+       "      <td>1.167897</td>\n",
+       "      <td>1.131735</td>\n",
+       "      <td>1.150229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-2.000000</td>\n",
+       "      <td>-2.000000</td>\n",
+       "      <td>-2.000000</td>\n",
+       "      <td>-2.000000</td>\n",
+       "      <td>-2.000000</td>\n",
+       "      <td>-2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              PAY_1         PAY_2         PAY_3         PAY_4         PAY_5  \\\n",
+       "count  26664.000000  26664.000000  26664.000000  26664.000000  26664.000000   \n",
+       "mean      -0.017777     -0.133363     -0.167679     -0.225023     -0.269764   \n",
+       "std        1.126769      1.198640      1.199165      1.167897      1.131735   \n",
+       "min       -2.000000     -2.000000     -2.000000     -2.000000     -2.000000   \n",
+       "25%       -1.000000     -1.000000     -1.000000     -1.000000     -1.000000   \n",
+       "50%        0.000000      0.000000      0.000000      0.000000      0.000000   \n",
+       "75%        0.000000      0.000000      0.000000      0.000000      0.000000   \n",
+       "max        8.000000      8.000000      8.000000      8.000000      8.000000   \n",
+       "\n",
+       "              PAY_6  \n",
+       "count  26664.000000  \n",
+       "mean      -0.293579  \n",
+       "std        1.150229  \n",
+       "min       -2.000000  \n",
+       "25%       -1.000000  \n",
+       "50%        0.000000  \n",
+       "75%        0.000000  \n",
+       "max        8.000000  "
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pay_feats = [\"PAY_1\", \"PAY_2\", \"PAY_3\", \"PAY_4\", \"PAY_5\", \"PAY_6\"]\n",
+    "\n",
+    "df[pay_feats].describe()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2520d34e-72fb-4d2f-b834-5351cb4dc430",
+   "id": "d6c7940c-188f-4133-b636-f4b40864edeb",
    "metadata": {},
    "outputs": [],
    "source": []
