Continuação dos exercícios

--- a/predicao-bons-pagadores.ipynb
+++ b/predicao-bons-pagadores.ipynb
@@ -6450,8 +6450,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
+   "id": "4cf6d3da-fb74-4374-b5b7-22ff10dc29e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ones_and_features = np.hstack([np.ones((X_test.shape[0],1)), X_test])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
    "id": "f37fd5e8-6fb2-4766-bf4a-f0ea5fb4beeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intercept_and_coefs = np.concatenate([lr.intercept_.reshape(1,1),\n",
+    "lr.coef_], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a74ed1d-e339-4bfe-a57e-9c63af8195c3",
    "metadata": {},
    "outputs": [],
    "source": []
