Finalização dos exercícios do capítulo

--- a/predicao-bons-pagadores.ipynb
+++ b/predicao-bons-pagadores.ipynb
@@ -5555,7 +5555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 102,
    "id": "ddf9c3a6-11d2-4687-9856-58cb62d75db3",
    "metadata": {},
    "outputs": [],
@@ -5577,7 +5577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 103,
    "id": "60febefa-10a9-44ec-9deb-dc515a621f3b",
    "metadata": {},
    "outputs": [
@@ -5994,7 +5994,7 @@
        "LogisticRegression(solver='liblinear')"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6014,7 +6014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 104,
    "id": "25a661d8-8da9-425b-8f82-a63ee2f96a94",
    "metadata": {},
    "outputs": [
@@ -6431,13 +6431,24 @@
        "LogisticRegression(solver='liblinear')"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "lr.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "3209ac31-7571-42e1-98b5-105085a9db1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = lr.predict(X_test)\n",
+    "y_pred_proba = lr.predict_proba(X_test)"
    ]
   },
   {
@@ -6450,7 +6461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 105,
    "id": "4cf6d3da-fb74-4374-b5b7-22ff10dc29e7",
    "metadata": {},
    "outputs": [],
@@ -6460,7 +6471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 106,
    "id": "f37fd5e8-6fb2-4766-bf4a-f0ea5fb4beeb",
    "metadata": {},
    "outputs": [],
@@ -6471,8 +6482,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "2a74ed1d-e339-4bfe-a57e-9c63af8195c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_lin_comb = np.dot(intercept_and_coefs, np.transpose(ones_and_features))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "bbc33844-52a6-4aa8-8ebd-23d7720d3583",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_proba_manual = sigmoid(X_lin_comb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "3547c59e-8af5-48fd-b0f0-aa841eac1839",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.25173076, 0.415703  , 0.20395547, ..., 0.415703  , 0.17278502,\n",
+       "        0.33606566]])"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_proba_manual"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a4b5bf0-7643-4a14-b62c-a9b7fc047350",
+   "metadata": {},
+   "source": [
+    "###### 5. Using a threshold of 0.5, manually calculate predicted classes. Compare this to the class predictions output by scikit-learn."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "40529a18-4263-462c-be1f-a7ebff7403b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_manual = y_pred_proba_manual >= 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "423c3d1b-b3f4-4001-b79f-fd084e96d0eb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "f6a1fef7-bbdb-4d92-bfc5-e8c0911320f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6201990844642832"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roc_auc_score(y_test, y_pred_proba_manual.reshape(y_pred_proba_manual.shape[1],))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "37d700af-9910-49ca-96de-62270183be41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6201990844642832"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roc_auc_score(y_test, y_pred_proba[:, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36726091-106e-4389-b739-c6a305771dba",
    "metadata": {},
    "outputs": [],
    "source": []
